--- a/src/views/public/article/index.ejs
+++ b/src/views/public/article/index.ejs
@@ -3,8 +3,8 @@
 <body>
     <%- include("../../partials/navbar") %>
 
-    <div class="container mt-4">
-        <div class="card">
+    <div class="container my-4">
+        <div class="card m-4">
             <div class="card-header">
                 <h1 class="display-4"><%= article.title %></h1>
                 
