--- a/src/views/public/category/index.ejs
+++ b/src/views/public/category/index.ejs
@@ -3,7 +3,7 @@
 <body>
     <%- include("../../partials/navbar") %>
 
-    <div class="container mt-4">
+    <div class="container my-4">
         <h1 class="display-4"><%= category.title %></h1>
 
         <hr>
